# neuropitch_env

./: .dockerignore  .env.example  .gitignore  README.md  __init__.py  blog.md  client.py  models.py  openenv.yaml  pyproject.toml
scripts/: train_grpo_neuropitch.py
server/: Dockerfile  __init__.py  app.py  neuropitch_env_environment.py  requirements.txt
server/web/: app.js  index.html  styles.css
